go-web-app/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-app
  namespace: go-web-app
  labels:
    app: go-app
spec:
  ports: 
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-app
  type: NodePort
